<?xml version="1.0"?>
<package format="2">
  <name>unav2_hardware</name>
  <version>0.0.0</version>
  <description>UNav2 hardware support package</description>
  <maintainer email="alessio@alessiomorale.com">Alessio Morale</maintainer>
  <license>MIT</license>
  <author email="alessio@alessiomorale.com">Alessio Morale</author>
  <author email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi </author>
  <depend>std_msgs</depend>
  <depend>unav2_msgs</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>rosserial_server</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export>
  </export>
</package>
